5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4328/executions/1601_2043.log
== TEST (2019-04-04 09:23:48) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = (x1*1 + x2*2 + x3+3 +x4*4) / 10

print(ronud(y,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(ronud(y,2))
NameError: name 'ronud' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:24:15) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = (x1*1 + x2*2 + x3+3 +x4*4) / 10

print(round(y,2))
-- OUTPUT:
7.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 09:25:00) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = (x1*1 + x2*2 + x3+3 +x4*4) / 10

print(round(y,2))
-- EXECUTION TIME:
0.18045
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
7.1
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
5.9
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
6.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:26:22) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = ((x1*1 + x2*2 + x3+3 +x4*4) / (10))

print(round(y,2))
-- OUTPUT:
7.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:27:04) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = ((x1*1 + x2*2 + x3*3 + x4*4 / (10))

print(round(y,2))
-- ERROR:
File "XXXX", line 8
    print(round(y,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:27:36) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = ((x1*1 + x2*2 + x3*3 + x4*4 / (10))

print(round(y,2))
-- ERROR:
File "XXXX", line 8
    print(round(y,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:27:47) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = ((x1*1 + x2*2 + x3*3 + x4*4 / (10))

print(round(y,2))
-- ERROR:
File "XXXX", line 8
    print(round(y,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:28:18) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = ((x1*1 + x2*2 + x3*3 + x4*4 / (10))

print(y)
-- ERROR:
File "XXXX", line 8
    print(y)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:28:50) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = ((x1*1 + x2*2 + x3*3 + x4*4 / (10))

print=(y)
-- ERROR:
File "XXXX", line 8
    print=(y)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:29:41) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = ((x1*1 + x2*2 + x3*3 + x4*4 / (10))

print((round(x,2))
-- ERROR:
File "XXXX", line 8
    print((round(x,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:22:01) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = ((x1*1 + x2*2 + x3*3 + x4*4 / (10))

print((round(x,2))
-- ERROR:
File "XXXX", line 8
    print((round(x,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:23:01) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = ((x1*1 + x2*2 + x3*3 + x4*4 / (10))

print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(x,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:23:12) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = ((x1*1 + x2*2 + x3*3 + x4*4 / (10))

print(round(x, 2))
-- ERROR:
File "XXXX", line 8
    print(round(x, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:23:46) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = ((x1*1 + x2*2 + x3*3 + x4*4 / (10))

print(round(x, 1))
-- ERROR:
File "XXXX", line 8
    print(round(x, 1))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:24:01) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = ((x1*1 + x2*2 + x3*3 + x4*4 / (10))

print(round(y, 2))
-- ERROR:
File "XXXX", line 8
    print(round(y, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:24:15) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = ((x1*1 + x2*2 + x3*3 + x4*4 / (10))

print(round(y,2))
-- ERROR:
File "XXXX", line 8
    print(round(y,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 08:54:54) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = ((x1*1 + x2*2 + x3*3 + x4*4 / (10))

print(round(y,2))
-- ERROR:
File "XXXX", line 8
    print(round(y,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 08:55:28) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = ((x1*1 + x2*2 + x3*3 + x4*4 / (10))

print(y)
-- ERROR:
File "XXXX", line 8
    print(y)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:57:03) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = ((x1*1 + x2*2 + x3*3 + x4*4 / (10))

print(y)
-- ERROR:
File "XXXX", line 8
    print(y)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:57:21) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = ((x1*1 + x2*2 + x3*3 + x4*4 / (10))

print(y)
-- ERROR:
File "XXXX", line 8
    print(y)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:58:21) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = ((x1*1 + x2*2 + x3*3 + x4*4) / (10))

print(y)
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 18:58:35) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

y = ((x1*1 + x2*2 + x3*3 + x4*4) / (10))

print(y)
-- EXECUTION TIME:
0.125163
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.936000000000002
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:59:16) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

print(((x1*1 + x2*2 + x3*3 + x4*4) / (10)))

-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 18:59:28) 
-- CODE:
x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

print(((x1*1 + x2*2 + x3*3 + x4*4) / (10)))

-- EXECUTION TIME:
0.130217
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.936000000000002
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:01:04) 
-- CODE:

x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

media = ((x1*1 + x2*2 + x3*3 + x4*4) / (10))

print(round(media,2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:01:17) 
-- CODE:

x1 = float(input())
x2 = float(input())
x3 = float(input())
x4 = float(input())

media = ((x1*1 + x2*2 + x3*3 + x4*4) / (10))

print(round(media,2))
-- EXECUTION TIME:
0.214273
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
